--- a/src/SqlSnap.Cli/packages.config
+++ b/src/SqlSnap.Cli/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommandLineParser" version="2.0.275-beta" targetFramework="net46" />
+  <package id="OctoPack" version="3.4.6" targetFramework="net46" developmentDependency="true" />
   <package id="Serilog" version="2.3.0" targetFramework="net46" />
   <package id="Serilog.Sinks.ColoredConsole" version="2.0.0" targetFramework="net46" />
 </packages>
