--- a/src/SqlSnap.Core/packages.config
+++ b/src/SqlSnap.Core/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Nito.AsyncEx" version="3.0.1" targetFramework="net46" />
   <package id="Serilog" version="2.3.0" targetFramework="net46" />
 </packages>
